--- a/profapp/templates/company/company_base_angular.html
+++ b/profapp/templates/company/company_base_angular.html
@@ -26,9 +26,9 @@
 {% raw %}
 <div ng-controller="CompanyMenuController" class="topbar-menu-links" ng-cloak>
     <div ng-if="user.id && company.id && user_active" ng-cloak>
-        <div class="container">
-            <div class="row menu-company-inside">
-                <div class="col-lg-12 col-md-6 col-sm-4 col-xs-4 menu-company">
+        <div class="container menu-company">
+            <div class="row">
+                <div class="col-lg-12 col-md-6 col-sm-4 col-xs-4">
                     <a ng-class="{'selected': selected_company_menu == 'materials'}"
                        href="{{ url_company_materials({company_id: company.id}) }}">{{ _('Materials') }}</a>
                     <a ng-class="{'selected': selected_company_menu == 'portals_partners'}" id="companies_partners"
@@ -36,35 +36,35 @@
                     <a ng-class="{'selected': selected_company_menu == 'companies_employees'}"
                        href="{{ url_company_employees({company_id: company.id}) }}">{{ _('Employees') }}</a>
 
-                    <img pr-image-url="{{ company.logo.url }}" class="menu-company-img menu-company-logo"/>
-                    <a class="company-about" ng-class="{'selected': selected_company_menu == 'home'}"
+
+                    <a class="pull-right" ng-class="{'selected': selected_company_menu == 'home'}"
                            href="{{ url_company_profile({company_id: company.id}) }}">{{ company.name }}</a>
+                    <img pr-image-url="{{ company.logo.url }}" class="menu-company-logo pull-right"/>
 
                 </div>
             </div>
 
             <div class="row">
-                <div ng-if="company.own_portal" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 menu-company
-                menu-company-portal">
-                    <a ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_banners'}"
+                <div ng-if="company.own_portal" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 menu-company no-shadow">
+                    <a class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_banners'}"
                        href="{{ url_portal_banners({company_id: company.id}) }}">{{ _('Banners') }}</a>
-                    <a ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_tags'}"
+                    <a class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_tags'}"
                        href="{{ url_portal_tags({company_id: company.id}) }}">{{ _('Tags') }}</a>
-                    <a ng-class="{'selected': selected_company_menu == 'publications'}"
+                    <a class="pull-right" ng-class="{'selected': selected_company_menu == 'publications'}"
                        id="publications"
                        href="{{ url_portal_publications({company_id: company.id}) }}">{{ _('Publications') }}</a>
-                    <a ng-class="{'selected': selected_company_menu == 'comments'}"
+                    <a class="pull-right" ng-class="{'selected': selected_company_menu == 'comments'}"
                        id="comments"
                        href="#">{{ _('Comments') }}</a>
-                    <a ng-class="{'selected': selected_company_menu == 'companies_readers'}"
+                    <a class="pull-right" ng-class="{'selected': selected_company_menu == 'companies_readers'}"
                        id="companies_readers"
                        href="{{ url_company_readers({company_id: company.id}) }}">{{ _('Readers') }}</a>
-                    <a ng-class="{'selected': selected_company_menu == 'companies_partners'}"
+                    <a class="pull-right" ng-class="{'selected': selected_company_menu == 'companies_partners'}"
                        href="{{ url_portal_companies_partners({company_id: company.id}) }}">{{ _('Members') }}</a>
-                    <a ng-if="0" ng-class="{'selected': selected_company_menu == 'statistics'}"
+                    <a class="pull-right" ng-if="0" ng-class="{'selected': selected_company_menu == 'statistics'}"
                        id="statistics"
                        href="#">{{ _('Statistics') }}</a>
-                    <a ng-if="0" ng-class="{'selected': selected_company_menu == 'portal_profile'}" id="portal_profile"
+                    <a class="pull-right" ng-if="0" ng-class="{'selected': selected_company_menu == 'portal_profile'}" id="portal_profile"
                        href="#">{{ _('Portal profile') }}</a>
                 </div>
             </div>
