--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -77,8 +77,9 @@
         });
     </script>
     {% raw %}
+
     <div ng-controller="CompanyProfile" ng-cloak>
-        <div class="container list-form" af
+        <div class="container" af
              af-after-save="afterSave"
              af-after-load="afterLoad"
              ng-model="data">
