--- a/profapp/templates/portal/portal_create.html
+++ b/profapp/templates/portal/portal_create.html
@@ -34,10 +34,9 @@
     </script>
     {% raw %}
 
-
     <div ng-controller="portal_create" ng-cloak>
         <form name="formPortal">
-            <div class="container list-form" af
+            <div class="container" af
                  af-after-save="afterSave"
                  af-watch="data.portal"
                  ng-model="data">
