--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -10,7 +10,7 @@
   display: none !important;
 }
 body {
-  padding-top: 80px;
+  padding-top: 75px;
 }
 .item-company {
   color: #00BBA1;
@@ -98,47 +98,18 @@ body {
   font-weight: 200;
   margin-top: 50px;
 }
-.menu-company a {
-  color: #333;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-bottom: 15px;
-  margin-top: 15px;
-  float: left;
+.menu-company {
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-bottom: 5px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-.menu-company a:hover {
-  color: #fff;
-  text-decoration: none;
-  background-color: #00ceb1;
-  transition: all 0.2s ease-out;
-  padding: 15px;
-  margin-bottom: 0px;
-  margin-top: 0px;
+.menu-company .row {
+  margin-left: 0px;
+  margin-right: 0px;
 }
-.menu-company a.selected {
-  color: #fff;
-  text-decoration: none;
-  background-color: #00ceb1;
-  transition: all 0.2s ease-out;
-  padding: 15px;
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-.menu-company img.menu-company-logo {
-  margin: 0px 5px;
-  padding: 0px;
-  float: right;
-}
-.menu-company.menu-company-portal a {
-  float: right;
-}
-.menu-company a.company-about {
-  float: right;
-}
-.menu-company-img {
-  height: 3em;
-  padding: 15px 0px;
-  margin-top: -20px;
+.menu-company.no-shadow {
+  box-shadow: none;
 }
 .menu-company .selected {
   color: #fff;
@@ -146,8 +117,43 @@ body {
   background-color: #00ceb1;
   padding: 15px;
 }
-.company-logo img {
-  margin-right: -15px;
+.menu-company img.menu-company-logo {
+  height: 41px;
+  margin-right: 5px;
+}
+.menu-company a {
+  display: inline;
+  color: #333;
+  float: left;
+  padding-right: 8px;
+  padding-left: 8px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-right: 2px;
+  margin-left: 0px;
+  text-decoration: none;
+}
+.menu-company a.pull-right {
+  margin-left: 2px;
+  margin-right: 0px;
+}
+.menu-company a:hover {
+  color: #fff;
+  text-decoration: none;
+  background-color: #00ceb1;
+  transition: all 0.2s ease-out;
+  padding: 8px;
+  margin-bottom: 2px;
+  margin-top: 2px;
+}
+.menu-company a.selected {
+  color: #fff;
+  text-decoration: none;
+  background-color: #00ceb1;
+  transition: all 0.2s ease-out;
+  padding: 8px;
+  margin-bottom: 2px;
+  margin-top: 2px;
 }
 /* ---Global menu--- */
 /*change language*/
@@ -206,19 +212,21 @@ body {
 .info-padding {
   padding-right: 0px !IMPORTANT;
 }
-#messenger-controller .menu-company li a div {
-  position: relative;
-}
-#messenger-controller .unread_messages_count {
+#messenger-controller .unread-items-count {
   font-size: 10px;
   line-height: 100%;
   text-align: center;
-  right: -10px;
-  bottom: -10px;
+  right: 2px;
+  bottom: 2px;
   padding: 0.2em;
   border-radius: 2px;
   background-color: #500;
   color: white;
+  position: absolute;
+}
+#messenger-controller .menu-company .unread-items-count {
+  right: -8px;
+  bottom: -8px;
 }
 .menu-site span {
   display: none;
@@ -234,7 +242,7 @@ body {
   position: absolute;
   right: 0px;
 }
-.menu-site div.unread_messages_count {
+.menu-site div.unread_messages_and_notifications_count {
   font-size: 10px;
   line-height: 100%;
   text-align: center;
@@ -250,31 +258,6 @@ body {
 }
 .hamburger-menu span {
   background-color: #fff;
-}
-.menu-company-inside {
-  border-bottom: 1px solid #101010;
-}
-/*---Company ID---*/
-.company-portal a {
-  color: #525252;
-  float: right;
-  margin-left: 15px;
-  border-bottom: 1px solid #fff;
-}
-.company-portal a:hover {
-  color: #00BBA1;
-  text-decoration: none;
-  border-bottom: 1px solid;
-  transition: all 0.2s ease-out;
-}
-.company-portal .selected a {
-  color: #00BBA1;
-  text-decoration: none;
-  border-bottom: 1px solid;
-  transition: all 0.2s ease-out;
-}
-.company-logo img {
-  margin-right: -15px;
 }
 /* ---AUTH User---*/
 .reset-pass button {
@@ -488,12 +471,6 @@ body {
   text-align: center;
   color: #7B7B7B;
 }
-.list-form {
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  border: 1px solid #f5f5f5;
-  margin-top: 10px;
-  margin-bottom: 50px;
-}
 .pr-external-link {
   margin-left: 0.5em;
 }
@@ -555,10 +532,6 @@ body {
 .company-thumbnail:hover {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition: all 0.2s ease-out;
-}
-.company-thumbnail.highlight {
-  box-shadow: 0 2px 5px 0 #ff0000, 0 2px 10px 0 rgba(255, 0, 0, 0.5);
-  transition: all 1s linear;
 }
 .company-thumbnail button {
   padding: 5px;
@@ -643,20 +616,6 @@ body {
   color: #555;
 }
 /* ---Reader-list--- */
-.reader-list-nav {
-  border-bottom: 1px solid #212121;
-  padding-bottom: 8px;
-}
-.reader-list-nav a {
-  display: inline !important;
-}
-.reader-list-nav li {
-  display: inline;
-}
-.reader-list-nav ul {
-  list-style: none;
-  padding-left: 0;
-}
 .list-reader-image {
   width: 100%;
   height: 0;
@@ -1177,11 +1136,6 @@ body {
   .company-logo img {
     margin-right: 0;
   }
-  .company-portal {
-    margin-top: 5px;
-    text-align: center;
-    margin-bottom: 15px;
-  }
   .edit-company button {
     text-align: center;
   }
@@ -1261,9 +1215,6 @@ body {
   }
   .edit-block {
     margin-top: 70px;
-  }
-  .company-portal a {
-    float: none;
   }
   .block-resp {
     margin-right: 15px;
@@ -1397,5 +1348,18 @@ body {
 }
 .panel-scroll-chat .speech-right > .speech .media-heading {
   color: #a07617;
+}
+#user_controller-controller {
+  background-color: #212121;
+  padding-bottom: 10px;
+}
+#user_controller-controller li {
+  list-style: none;
+  display: inline;
+  color: #18bc9c;
+  padding-right: 15px;
+}
+#user_controller-controller ul {
+  margin-top: 20px;
 }
 /*# sourceMappingURL=style.css.map */
