--- a/profapp/templates/_ruslan/reader/_reader_nav.html
+++ b/profapp/templates/_ruslan/reader/_reader_nav.html
@@ -7,11 +7,9 @@
 <div class="container">
     <div ng-cloak class="row reader-list-nav menu-company ">
         <div class="col-lg-12">
-            <ul>
-                <li><a pr_test="UserNews" class="reader_button_list" href="{{ url_for('index.list_reader') }}">{{ _('News') }}</a></li>
-                <li><a pr_test="UserFavorites" class="reader_button_favorite" href="{{ url_for('index.list_reader', favorite=True) }}">{{ _('Bookmark') }}</a></li>
-                <li><a pr_test="UserSubscriptions" class="reader_button_profile" href="{{ url_for('index.reader_profile') }}" >{{ _('Subscriptions') }}</a></li>
-            </ul>
+                <a pr_test="UserNews" class="reader_button_list" href="{{ url_for('index.list_reader') }}">{{ _('News') }}</a>
+                <a pr_test="UserFavorites" class="reader_button_favorite" href="{{ url_for('index.list_reader', favorite=True) }}">{{ _('Bookmark') }}</a>
+                <a pr_test="UserSubscriptions" class="reader_button_profile" href="{{ url_for('index.reader_profile') }}" >{{ _('Subscriptions') }}</a>
         </div>
     </div>
 </div>
