--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -159,6 +159,11 @@ body {
     margin-right: 2px;
     margin-left: 0px;
     text-decoration: none;
+    cursor:pointer;
+  }
+
+  a * {
+    cursor:pointer;
   }
 
   a.pull-right {
