--- a/profapp/templates/messenger/messenger.html
+++ b/profapp/templates/messenger/messenger.html
@@ -588,7 +588,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 menu-company">
-                    <a ng-click="set_selected_menu('chat')" href="link"
+                    <a ng-click="set_selected_menu('chat')"
                        ng-class="{'selected': selected_messenger_menu == 'chat'}">
                         <span class="pr">
                             <span class="unread-items-count"
@@ -597,10 +597,10 @@
                         </span>
                     </a>
 
-                    <a ng-click="set_selected_menu('community')" class="link"
+                    <a ng-click="set_selected_menu('community')"
                        ng-class="{'selected': selected_messenger_menu == 'community'}">{{ ::_('Community')
                         }}</a>
-                    <a ng-click="set_selected_menu('notifications')" class="link"
+                    <a ng-click="set_selected_menu('notifications')" 
                        ng-class="{'selected': selected_messenger_menu == 'notifications'}">
                         <span class="pr">
                         <span class="unread-items-count"
